<resources>
    <string name="app_name">DroidBountyHunter</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="titulo_activity_agregar">Nuevo fugitivo</string>
    <string name="titulo_activity_detalle">Detalle Fugitivo</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="titulo_capturados">Capturados</string>
    <string name="titulo_fugitivos">Fugitivos</string>
    <string name="titulo_acerca_de">Acerca de…</string>

    <string name="menu_agregar">Agregar</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="boton_capturar">Capturar</string>
    <string name="boton_foto">Tomar Foto</string>
    <string name="boton_mapa">Ver mapa</string>

    <string name="campo_nombre">Nombre del Fugitivo</string>
    <string name="etiqueta_desarrollo">Desarrollado por:</string>
    <string name="nombre_desarrollador">Alejandro Rincón</string>
    <string name="etiqueta_empresa">D.W. Training S.C.</string>
    <string name="etiqueta_mensaje">Mensaje…</string>
</resources>