<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        >

        <TextView
            android:id="@+id/etiquetaMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta_mensaje"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/pictureFugitive"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_below="@id/etiquetaMensaje"
            android:layout_centerHorizontal="true"
            android:src="@android:drawable/ic_menu_gallery"/>

        <Button
            android:id="@+id/botonCapturar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:minWidth="100dp"
            android:text="@string/boton_capturar"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/pictureFugitive"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/botonEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:minWidth="100dp"
            android:text="@string/boton_eliminar"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_below="@+id/botonCapturar"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/botonTomarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:minWidth="100dp"
            android:text="@string/boton_foto"
            android:layout_below="@+id/botonEliminar"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            />

        <Button
            android:id="@+id/botonVerMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:minWidth="100dp"
            android:text="@string/boton_mapa"
            android:layout_below="@id/botonTomarFoto"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_indicator"
        android:layout_width="@dimen/fullscreen_progress_indicator_size"
        android:layout_height="@dimen/fullscreen_progress_indicator_size"
        android:theme="@style/Common.CircularProgressTheme"
        android:layout_centerInParent="true"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar"
        tools:visibility="visible" />

</RelativeLayout>